--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation libs.compose.foundation
     implementation libs.navigation.runtime.android
     implementation libs.navigation.compose
+    implementation libs.work.runtime.ktx
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
@@ -71,4 +72,6 @@ dependencies {
 
     implementation("dev.chrisbanes.haze:haze:1.5.0")
     implementation("dev.chrisbanes.haze:haze-materials:1.5.0")
+
+    implementation("io.coil-kt:coil-compose:2.4.0")
 }
